# json2rs

./: .gitignore  Cargo.toml  README.md
configs/: jdk17.toml  jsoncpp.toml  kotlin.toml  python.toml  rust.toml  typescript.toml
src/: cli.rs  config.rs  main.rs
src/generators/: config_based.rs  mod.rs  traits.rs
src/infer/: structs.rs  types.rs
tests/: test.json
