[package]
name = "json2rs"
version = "0.1.0"
edition = "2024"
authors = ["MojaveHao <HTTcode2020@126.com>"]
description = "A short description of your app"
license = "GPL-3"
repository = "https://github.com/BlophyNova/json2rs"
documentation = "https://docs.rs/json2rs"
readme = "README.md"

[dependencies]
serde_json = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "1.0.3+spec-1.1.0"
lazy_static = "1.4"
